@@ -1,1 +1,0 @@
-a46c91c916a1a2edaca78e434f231a82  ltraf-0.2.2-beta2.tar.gz
